--- a/src/theme.css
+++ b/src/theme.css
@@ -398,6 +398,12 @@
   flex: 1;
   padding: 0.5rem;
 }
+.editor-page {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 0;
+}
 .editor-main {
   display: flex;
   height: 100%;
